# deeplearning-fundamentals

./: README.md  pyproject.toml
dl_fundamentals/ms-learn/01-Introduction/: 2-tensors.ipynb  3-data.ipynb  4-transforms.ipynb  5-model.ipynb  6-autograd.ipynb  7-optimization.ipynb  8-inference.ipynb  9-quickstart.ipynb
dl_fundamentals/ms-learn/01-Introduction/data/FashionMNIST/raw/: t10k-images-idx3-ubyte.gz:com.dropbox.attrs  t10k-images-idx3-ubyte:com.dropbox.attrs  t10k-labels-idx1-ubyte.gz:com.dropbox.attrs  t10k-labels-idx1-ubyte:com.dropbox.attrs  train-images-idx3-ubyte.gz:com.dropbox.attrs  train-images-idx3-ubyte:com.dropbox.attrs  train-labels-idx1-ubyte.gz:com.dropbox.attrs  train-labels-idx1-ubyte:com.dropbox.attrs
dl_fundamentals/ms-learn/02-Introduction to Computer Vision/: 2-image-data.ipynb  3-train-dense-neural-networks.ipynb  4-multilayer-dense-neural-networks.ipynb  5-convolutional-networks.ipynb  6-transfer-learning.ipynb  7-mobilenet.ipynb
dl_fundamentals/ms-learn/03-Introduction to Natural Language Processing/: 1-Intro.ipynb  2-represent-text-as-tensors.ipynb  3-embeddings.ipynb  4-recurrent-networks.ipynb  5-generative-networks.ipynb  6-attention-transformers.ipynb  torchnlp.py
dl_fundamentals/ms-learn/03-Introduction to Natural Language Processing/data/AG_NEWS/: test.csv:com.dropbox.attrs  train.csv:com.dropbox.attrs
dl_fundamentals/ms-learn/04-Introduction to Audio Classification/: 2-understand-audio-data.ipynb  4-speech-model.ipynb
